--- a/src/App.css
+++ b/src/App.css
@@ -31,29 +31,27 @@
   margin: 0 3%;
   opacity: 0.7;
   background: #eee;
-  color: #ddd;
+  color: #222;
+  height: 25px;
 }
 
 .add-habit-input:focus,
 .add-habit-input:active {
   opacity: 1;
-  font-weight: bold;
-}
-
-.add-habit-input {
-  height: 25px;
 }
 
 .add-habit button {
   border-radius: 100px;
   padding: 0.2em 0.5em;
   font-weight: bold;
-  background: #eee;
+  background: #c8f;
+  color: #222;
   opacity: 0.7;
 }
 
 .add-habit button:hover {
   opacity: 1;
+  transform: scale(1.04);
 }
 
 .add-habit label {
@@ -82,7 +80,6 @@
 
 .habit {
   text-align: center;
-  margin: ;
 }
 
 .habit:hover {
